PostGIS 1.0.0
?????
	- early return from force_collection
	- segfault fix in geom_accum()
	- consistency check fix in SnapToGrid()

PostGIS 1.0.0RC3
2005/02/24
	- transform(): missing SRID bugfix, better error handling
	- jdbc2: small patches, box2d/3d tests, revised docs and license.
	- jdbc2: bug fix and testcase in for pgjdbc 8.0 type autoregistration
	- few changes in autoconf 
	- reduced precision of box2d output.
	- some functions made IMMUTABLE from STABLE,
	  for performance improvement
	- new performance tips chapter in manual
	- BUILDDATE extraction made more portable
	- fixed bogus 72 index bindings
	- prefixed DEBUG macros with PGIS_ to avoid clash with pgsql one
	- fixes in probe_geometry_columns() to work with PG72 and support
	  multiple geometry columns in a single table
	- fixed spatial_ref_sys.sql to avoid vacuuming the whole database.
	- jdbc2: Removed use of jdk1.4 only features to enable build with 
	  older jdk releases.
	- jdbc2: Added support for building against pg72jdbc2.jar
	- documentation updates: pgsql72 requirement, lwpostgis.sql
	- memory alignment handling
	- fixed bug in force_collection causing mapserver connector
	  failures on simple (single) geometry types.
	- jdbc2: updated and cleaned makefile
	- plugged a leak in GEOS2POSTGIS converter
	- jdbc2: added BETA support for jts geometry classes
	- jdbc2: Skip known-to-fail tests against older PostGIS servers.
	- jdbc2: Fixed handling of measured geometries in EWKT.
	- Reduced memory usage by early releasing query-context palloced one.
	- Added bool::text cast in lwpostgis.sql
	- bug fix in GeometryFromText() missing to add a bbox cache.
	- spatial_ref_sys: changed Paris entries to match the ones
	  distributed with 0.x.

PostGIS 1.0.0RC2
2005/01/26
	- More correct STABLE, IMMUTABLE, STRICT uses in lwpostgis.sql
	- GEOMETRYCOLLECTION(EMPTY) syntax support for backward compatibility
	- faster and more robust loader (both i18n and not)
	- faster binary outputs