@@ -26,11 +26,11 @@
 
 package org.postgis;
 
-import org.postgresql.util.PGtokenizer;
-
 import java.sql.SQLException;
 
 public class MultiLineString extends ComposedGeom {
+    /* JDK 1.5 Serialization */
+    private static final long serialVersionUID = 0x100;
 
     double len = -1;
 
@@ -49,28 +49,17 @@ public class MultiLineString extends ComposedGeom {
     public MultiLineString(String value) throws SQLException {
         this(value, false);
     }
-    
-    protected MultiLineString(String value, boolean haveM) throws SQLException {
-        this();
-        value = value.trim();        
-        if (value.indexOf(typestring) == 0) {
-            int pfxlen = typestring.length();
-            if (value.charAt(pfxlen) == 'M') {
-                pfxlen += 1;
-                haveM = true;
-            }
-            value = value.substring(pfxlen).trim();
-            PGtokenizer t = new PGtokenizer(PGtokenizer.removePara(value), ',');
-            int nlines = t.getSize();
-            subgeoms = new LineString[nlines];
-            for (int p = 0; p < nlines; p++) {
-                subgeoms[p] = new LineString(t.getToken(p), haveM);
-            }
-            dimension = subgeoms[0].dimension;
-            haveMeasure = subgeoms[0].haveMeasure;
-        } else {
-            throw new SQLException("postgis.multilinestringgeometry");
-        }
+
+    public MultiLineString(String value, boolean haveM) throws SQLException {
+        super(MULTILINESTRING, value, haveM);
+    }
+
+    protected Geometry createSubGeomInstance(String token, boolean haveM) throws SQLException {
+        return new LineString(token, haveM);
+    }
+
+    protected Geometry[] createSubGeomArray(int nlines) {
+        return new LineString[nlines];
     }
 
     public int numLines() {
