@@ -30,6 +30,9 @@ package org.postgis;
 import java.sql.SQLException;
 
 public class PGbox3d extends PGboxbase {
+    /* JDK 1.5 Serialization */
+    private static final long serialVersionUID = 0x100;
+
     public PGbox3d() {
         super();
     }
